# owui-mcp-spawner

./: .gitignore  README.md  pyproject.toml
app/: admin_server.py  auth.py  config_store.py  dependency_manager.py  logger.py  manager.py  mcp_runner.py  process_manager.py  schema.py  schema_gen.py  security.py  settings_store.py  tool_editor.py  tool_loader.py  validate_worker.py  venv_manager.py
configs/: example.json
deploy/: owui-mcp-spawner.env.example  owui-mcp-spawner.service.example
examples/: mcp-manager-control.json  test_settings_tool.py
web/: app.js  index.html  style.css
