[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "owui-mcp-spawner"
version = "0.1.1"
description = "Spawn OpenWebUI tool JSONs as isolated Model Context Protocol (MCP) servers"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0.0",
    "packaging>=24.0",
    "starlette>=0.36.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
